<resources>
    <string name="app_name">My Application</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="or">or</string>
    <string name="continue_with_apple">Continue with Apple</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="let_s_you_in">Let\'s you in</string>
    <string name="sign_in_with_password">Sign in with password</string>
    <string name="create_your_account">Create your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_up">Sign up</string>
    <string name="or_continue_with">or continue with</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="facebook_icon">facebook_icon</string>
    <string name="google_icon">google icon</string>
    <string name="apple_icon">apple icon</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
</resources>