<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="20dp"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignUpFragment">


    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/main_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:scaleType="centerInside"
        android:background="@color/white"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_your_account"
        android:textSize="34sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_image"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:drawableStart="@drawable/custom_email_icon"
        android:layout_marginTop="30dp"
        android:padding="20dp"
        android:drawablePadding="15dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/custom_input"
        app:layout_constraintTop_toBottomOf="@+id/main_text"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:drawableStart="@drawable/custom_lock_icon"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:drawablePadding="15dp"
        android:inputType="textPassword"
        android:background="@drawable/custom_input"
        app:layout_constraintTop_toBottomOf="@+id/email"
        />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:textColorHighlight="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_up_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:background="@drawable/button_hover"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/checkbox"

        />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#AEDBDBDB"
        android:layout_marginTop="60dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        tools:ignore="MissingConstraints"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sign_up_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_continue_with"
        android:layout_marginTop="48dp"
        android:background="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        />

    <LinearLayout
        android:id="@+id/icon_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@+id/line"
        >

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:contentDescription="@string/facebook_icon"
            android:padding="15sp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/facebook_icon"
            android:scaleType="centerInside"
            android:background="@drawable/icon_button"
            android:layout_weight="1"
            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/google_icon"
            android:padding="15sp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/google_icon"
            android:scaleType="centerInside"
            android:background="@drawable/icon_button"
            android:layout_weight="1"

            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/apple_icon"
            android:padding="15sp"
            android:src="@drawable/apple_icon"
            android:scaleType="centerCrop"
            android:background="@drawable/icon_button"
            android:layout_weight="1"
            />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sign_in_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:textColor="#98717171"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/icon_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/sign_in_link"
        app:layout_constraintRight_toRightOf="parent"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sign_in_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@+id/sign_in_text"
        app:layout_constraintTop_toBottomOf="@id/icon_layout"
        app:layout_constraintRight_toRightOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>