<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignInFragment">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/main_image"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:src="@drawable/image"
        android:layout_marginTop="15sp"
        android:scaleType="centerInside"
        android:background="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/let_s_you_in"
        android:textSize="42sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_image"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/facebook_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_marginTop="20dp"
        android:paddingVertical="20dp"
        android:text="@string/continue_with_facebook"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_text"

        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/facebook_icon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/facebook_icon"
        android:layout_marginStart="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/facebook_btn"
        app:layout_constraintTop_toTopOf="@+id/facebook_btn"
        app:layout_constraintLeft_toLeftOf="@+id/facebook_btn"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/google_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_marginTop="20dp"
        android:paddingVertical="20dp"
        android:text="@string/continue_with_google"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facebook_btn"

        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/google_icon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/google_icon"
        android:layout_marginStart="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/google_btn"
        app:layout_constraintTop_toTopOf="@+id/google_btn"
        app:layout_constraintLeft_toLeftOf="@+id/google_btn"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/apple_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_marginTop="20dp"
        android:paddingVertical="20dp"
        android:text="@string/continue_with_apple"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/google_btn"

        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/apple_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/apple_icon"
        android:backgroundTint="@color/white"
        android:layout_marginStart="64dp"
        app:layout_constraintBottom_toBottomOf="@+id/apple_btn"
        app:layout_constraintTop_toTopOf="@+id/apple_btn"
        app:layout_constraintLeft_toLeftOf="@+id/apple_btn" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#AEDBDBDB"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@+id/apple_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textSize="18sp"
        android:textColor="#C7494949"
        android:textStyle="bold"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/line"
        app:layout_constraintTop_toTopOf="@+id/line"
        app:layout_constraintLeft_toLeftOf="@+id/line"
        app:layout_constraintRight_toRightOf="@+id/line"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_in_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_with_password"
        android:background="@drawable/button_hover"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/line"

        />

</androidx.constraintlayout.widget.ConstraintLayout>